chore: clean up